refactor: 섭취 이력 조회를 IntakeHistoryCalendar 기반으로 리펙토링하여 중복 로직 제거